# InsightForge_AI

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py
app/agents/: anomaly_detection_agent.py  base_agent.py  business_analyst_agent.py  chart_recommendation_agent.py  correlation_agent.py  dashboard_builder_agent.py  data_cleaning_agent.py  data_loader_agent.py  data_quality_agent.py  executive_summary_agent.py  export_agent.py  feature_engineering_agent.py  forecast_agent.py  insight_agent.py  kpi_agent.py  langgraph_adapter.py  orchestrator.py  outlier_detection_agent.py  profiling_agent.py  query_agent.py  recommendation_agent.py  report_agent.py  root_cause_agent.py  schema_detection_agent.py  statistics_agent.py  visualization_agent.py
app/llm/: anthropic_provider.py  base_provider.py  gemini_provider.py  llm_factory.py  (+2 more)
backend/: main.py
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
frontend/: streamlit_app.py
scripts/: generate_sample_data.py  run_backend.sh  run_frontend.sh  run_tests.sh
tests/: conftest.py  test_api.py  test_chart_recommendation_visualization.py  test_data_cleaning_quality.py  test_data_loader_agent.py  test_export_agent.py  test_feature_engineering_agent.py  test_insight_recommendation_query.py  test_kpi_forecast.py  test_langgraph_adapter.py  test_orchestrator_integration.py  test_outlier_anomaly.py  test_query_agent.py  test_root_cause_agent.py  test_schema_detection_agent.py  test_statistics_correlation.py
(+23 files in other folders)
