[project]
name = "insightforge-ai"
version = "1.0.0"
description = "Enterprise-grade AI Data Analytics Agent Platform"
authors = [{ name = "InsightForge-AI Contributors" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -q"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = false

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
